Adding style and functionality for header Fixing style for section-content-cards.scss Fixing style for section-featured-products.scss Fixing style for section-posters.scss

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -15,7 +15,7 @@
     "heading_scale": 100,
     "type_body_font": "assistant_n4",
     "body_scale": 100,
-    "page_width": 1360,
+    "page_width": 1440,
     "spacing_sections": 0,
     "spacing_grid_horizontal": 8,
     "spacing_grid_vertical": 8,
@@ -123,8 +123,9 @@
         "type": "header",
         "settings": {
           "color_scheme": "background-1",
-          "logo": "{{ shop.brand.logo }}",
-          "logo_width": 90,
+          "logo": "shopify:\/\/shop_images\/Logo.webp",
+          "logo_width": 180,
+          "logo_width_mobile": 105,
           "logo_position": "middle-left",
           "menu": "main-menu",
           "menu_type_desktop": "dropdown",
